--- a/www/css/style.css
+++ b/www/css/style.css
@@ -67,13 +67,7 @@ max-height:400px;
 }
 
 
-.icon-header-cadr{
-margin-top: -4px;
-float: left;
-margin-right: 8px;
-color: orange;
-margin-bottom: 6px;
-}
+.icon-header-cadr{margin-top: -4px;float: left;margin-right: 8px;color: orange;margin-bottom: 6px;}
 
 #form_chat{border-top: 1px solid #ff9800;position: fixed;bottom: 0;background: rgb(239, 238, 238);left: 0;width: 100%;float: left;padding-left: 1px;padding-top: 4px;z-index: 1111;height: 80px;margin-bottom: 0;}
 
@@ -148,13 +142,13 @@ font-size: 16px;
    width:90% !important;
 }
 
-#angl_chats{position: absolute;bottom: 0;width: 100%;background: #fffffff2;z-index: 99999;height: 400px;border-top: 4px solid orange;display: none;}
-#all_chat {height:400px;overflow:scroll;width: 100%;float: left;}
+#angl_chats{position: absolute;bottom: 0;width: 100%;background: #ffffff;z-index: 99999;height: 400px;border-top: 4px solid orange;display: none;}
+#all_chat {height:400px;overflow:scroll;width: 100%;float: left;background: white;}
 #btn_close_chat{
     float: right;
     margin-right: 30px;
 }
-.header_chat{width:100%;float:left;border-bottom: 1px solid #ff9800;padding-bottom: 13px;}
+.header_chat{width:100%;float:left;border-bottom: 1px solid #ff9800;padding-bottom: 8px;background: white;}
 .modal-content .img_q{max-height: 191px;height: auto;width: 100%;}
 .resltat_q_a{margin-bottom: 10px;}
 
