--- a/www/css/style.css
+++ b/www/css/style.css
@@ -56,16 +56,22 @@ margin-right: 10px;
 color: #ff9800;
 font-size: 27px;
 }
-.card-content{
-margin-top:16px;
-width:100%;float:left;   
-border: 1px solid rgba(128, 128, 128, 0.22);
-}
+.card-content{margin-top: 0px;width:100%;float:left;border: 1px solid rgba(128, 128, 128, 0.22);}
 
 .card-image img{
-max-height:400px;
-}
-
+  max-height: 220px;
+  margin: auto;
+ }
+#question_arabic{
+  width: 100%;
+  float: left;
+  border: 2px solid #ff9800;
+  padding: 8px;
+  border-radius: 5px;
+  text-align: right;
+  margin-top: 25px;
+  font-weight: bold;
+ }
 
 .icon-header-cadr{margin-top: -4px;float: left;margin-right: 8px;color: orange;margin-bottom: 6px;}
 
@@ -77,7 +83,8 @@ max-height:400px;
 .chat-me .card-panel{
 box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgb(255, 152, 0), 0 3px 1px -2px rgb(255, 152, 0) !important;
 }
-
+.rep_q_user{
+}
 .rep_q_rep_user button{margin-bottom: 10px;}
 .h6{
 background: white;
@@ -213,6 +220,9 @@ border-bottom: 1px solid;
 height:160px;
 width:auto;
 max-width: 100%;
+}
+.section.no-pad-bot {
+ margin-top: -7px;
 }
 #nom_ecole{
 font-size:12px;
