--- a/www/css/style.css
+++ b/www/css/style.css
@@ -124,9 +124,19 @@ font-size: 16px;
     margin-right: 30px;
 }
 .header_chat{width:100%;float:left;border-bottom: 1px solid #ff9800;padding-bottom: 8px;background: white;}
-.modal-content .img_q{max-height: 191px;height: auto;width: 100%;}
+.modal-content .img_q{max-height: 165px;height: auto;width: 100%;}
 .resltat_q_a{margin-bottom: 10px;}
-
+#question_arabic_mod{
+    width: 100%;
+    float: left;
+    border: 2px solid #ff9800;
+    padding: 8px;
+    border-radius: 5px;
+    text-align: right;
+    margin-top: 2px;
+    margin-bottom: 6px;
+    font-weight: bold;
+}
 .close_modal{float: left;margin-left: 10px;background: orange;color: white;padding: 10px;height: 44px;width: 80px;font-size: 20px;}
 
 .play_rep{font-size: 15px;color: #fafafa;float: left;margin: 0 auto;line-height: 24px;background: orange;text-align: center;padding: 12px;width: 100px !important;height: 44px;border: none;}
