--- a/www/css/style.css
+++ b/www/css/style.css
@@ -357,3 +357,30 @@ max-height: 120px;
     text-align: right;
     float: right !important;
 }
+.explication {
+    font-size: 15px;
+    color: #fafafa;
+    float: left;
+    margin: 0 auto;
+    line-height: 24px;
+    background: orange;
+    text-align: center;
+    padding: 12px;
+    width: 80px !important;
+    height: 44px;
+    border: none;
+    margin-left: 14px;
+}
+.expliquation_arabic{
+	    display: none;
+    background: white;
+    border: 1px solid orange;
+    width: 100%;
+    float: right;
+    margin-bottom: 13px;
+    border-top: 4px solid orange;
+}
+button:focus {
+    outline: none;
+    background-color: #804c00;
+}
